Get the correct day start and end format, get the title, notes, and date times. Display them.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SMSTrialApp</string>
+    <string name="title_activity_obtain_dates">obtainDates</string>
 </resources>
